--- a/Memory-match.html
+++ b/Memory-match.html
@@ -38,7 +38,7 @@
                         setTimeout(function(){
                             $('.card-hidden').removeClass('card-hidden');
                             can_click = true;
-                        }, 1500);
+                        }, 1000);
 
                 }
                     my_card = null
@@ -50,7 +50,9 @@
 <body>
     <div class="header">
         <div class="game-logo">
-            <p>Game Logo</p>
+                <img class="pikachu-logo" src="images/pikachu-logo.png">
+                <img class="charmander-logo.png" src="images/charmander-logo">
+            
         </div>
         <div class="reset-button">
             Reset Game
@@ -95,6 +97,66 @@
                     <img src="images/snorlax.jpg" class="card card-front" id="card_front6" data-card="snorlax">
                     <img src="images/back-card.jpeg" class="card card-back" id="card_back6" 
                     onclick="card_click(6)">
+                    </div>
+                    <div class="card_container" id="card_container7">
+                    <img src="images/mewtwo.png" class="card card-front" id="card_front7" data-card="mewtwo">
+                    <img src="images/back-card.jpeg" class="card card-back" id="card_back7" 
+                    onclick="card_click(7)">
+                    </div>
+                    <div class="card_container" id="card_container8">
+                    <img src="images/mewtwo.png" class="card card-front" id="card_front8" data-card="mewtwo">
+                    <img src="images/back-card.jpeg" class="card card-back" id="card_back8" 
+                    onclick="card_click(8)">
+                    </div>
+                    <div class="card_container" id="card_container9">
+                    <img src="images/venusaur.jpg" class="card card-front" id="card_front9" data-card="venusaur">
+                    <img src="images/back-card.jpeg" class="card card-back" id="card_back9" 
+                    onclick="card_click(9)">
+                    </div>
+                    <div class="card_container" id="card_containe10">
+                    <img src="images/venusaur.jpg" class="card card-front" id="card_front10" data-card="venusaur">
+                    <img src="images/back-card.jpeg" class="card card-back" id="card_back10" 
+                    onclick="card_click(10)">
+                    </div>
+                    <div class="card_container" id="card_container11">
+                    <img src="images/blastoise.jpeg" class="card card-front" id="card_front11" data-card="blastoise">
+                    <img src="images/back-card.jpeg" class="card card-back" id="card_back11" 
+                    onclick="card_click(11)">
+                    </div>
+                    <div class="card_container" id="card_container12">
+                    <img src="images/blastoise.jpeg" class="card card-front" id="card_front12" data-card="blastoise">
+                    <img src="images/back-card.jpeg" class="card card-back" id="card_back12" 
+                    onclick="card_click(12)">
+                    </div>
+                    <div class="card_container" id="card_container13">
+                    <img src="images/meowth.jpeg" class="card card-front" id="card_front13" data-card="meowth">
+                    <img src="images/back-card.jpeg" class="card card-back" id="card_back13" 
+                    onclick="card_click(13)">
+                    </div>
+                    <div class="card_container" id="card_container14">
+                    <img src="images/meowth.jpeg" class="card card-front" id="card_front14" data-card="meowth">
+                    <img src="images/back-card.jpeg" class="card card-back" id="card_back14" 
+                    onclick="card_click(14)">
+                    </div>
+                    <div class="card_container" id="card_container15">
+                    <img src="images/jigglypuff.jpeg" class="card card-front" id="card_front15" data-card="jigglypuff">
+                    <img src="images/back-card.jpeg" class="card card-back" id="card_back15" 
+                    onclick="card_click(15)">
+                    </div>
+                    <div class="card_container" id="card_container16">
+                    <img src="images/jigglypuff.jpeg" class="card card-front" id="card_front16" data-card="jigglypuff">
+                    <img src="images/back-card.jpeg" class="card card-back" id="card_back16" 
+                    onclick="card_click(16)">
+                    </div>
+                    <div class="card_container" id="card_container17">
+                    <img src="images/zapdos.jpg" class="card card-front" id="card_front17" data-card="zapdos">
+                    <img src="images/back-card.jpeg" class="card card-back" id="card_back17" 
+                    onclick="card_click(17)">
+                    </div>
+                    <div class="card_container" id="card_container18">
+                    <img src="images/zapdos.jpg" class="card card-front" id="card_front18" data-card="zapdos">
+                    <img src="images/back-card.jpeg" class="card card-back" id="card_back18" 
+                    onclick="card_click(18)">
                     </div>
                     </div>
         </div>
