--- a/Memory-match.html
+++ b/Memory-match.html
@@ -8,6 +8,9 @@
     <script>
         var my_card = null;
         var can_click = true;
+        var attempts = 0;
+        var successful_attempts = 0;
+        var accuracy = 0.0;
         //make a global variable indicating I can click again
         function card_click(card_number){
             //if the global click variable is false, return
@@ -25,16 +28,26 @@
                 }
                 else 
                 {
+                    attempts = attempts + 1;
+                    if (attempts > 0) {
+                    console.log('attempts is equal to : ' + attempts)
+                    $('.attempts').html(attempts);
+                    }
+
+                    console.log("They have attempted : " + attempts + " tries.")
                     console.log('second card was clicked, it was card 1, it was '+$('#card_front' + card_number).attr('data-card'));
                     //do stuff for 2nd click
                     if(my_card == $('#card_front' + card_number).attr('data-card')){
                         console.log('they match');
-                        $('.card-hidden').addClass('card-match');        
+                        successful_attempts += 1;
+                        accuracy = (successful_attempts/attempts * 100 + '%')
+                        $('.card-hidden').addClass('card-match'); 
+
                     }
                     else{
                         console.log('they do not match');
                         can_click=false;
-                        console.log("can click was turned off")
+                        console.log("can click was turned off");
                         setTimeout(function(){
                             $('.card-hidden').removeClass('card-hidden');
                             can_click = true;
@@ -49,6 +62,7 @@
             $('.card-match').removeClass('card-match');
             my_card=null
         }
+
         </script>
 </head>
 
@@ -70,8 +84,10 @@
     <div class="game-info">
         <h1>Stats:</h1>
         <p>Time played:</p>
-        <p>Number of tries:</p>
+        <p >Number of tries:</p>
+        <div class="attempts">000</div>
         <p>Accuracy:</p>
+        <div class="accuracy">100%</div>
     </div>
     <div class="game-area">
          <div class="card_container" id="card_container1">
